[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mongomock"
dynamic = ["version"]
description = "Fake pymongo stub for testing simple MongoDB-dependent code"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
authors = [
    { name = "Rotem Yaari", email = "vmalloc@gmail.com" },
    { name = "Martin Domke", email = "mail@martindomke.net" },
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Topic :: Database",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging",
    "pytz",
    "sentinels",
]

[project.optional-dependencies]
pyexecjs = ["pyexecjs"]
pymongo = ["pymongo"]

[project.urls]
Homepage = "https://github.com/mongomock/mongomock"
Changelog = "https://github.com/mongomock/mongomock/blob/develop/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mongomock"]
