[metadata]
author = Rotem Yaari
author-email = vmalloc@gmail.com
name = mongomock
description = Fake pymongo stub for testing simple MongoDB-dependent code
description-file = README.rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database


[files]
packages = mongomock


[bdist_wheel]
universal = True
