[metadata]
author = Rotem Yaari
author-email = vmalloc@gmail.com
name = mongomock
description = Fake pymongo stub for testing simple MongoDB-dependent code
description-file = README.rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database


[files]
packages = mongomock
package-data = mongomock = py.typed, *.pyi


[bdist_wheel]
universal = True
