[metadata]
author = Rotem Yaari
author_email = vmalloc@gmail.com
name = mongomock-new
description = Fake pymongo stub for testing simple MongoDB-dependent code
long_description = file:README.rst
description_file = README.rst
license = BSD
version = 0.0.3
project_urls =
    Source = https://github.com/mohamadkhalaj/mongomock
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database


[files]
packages = mongomock
package-data = mongomock = py.typed, *.pyi


[bdist_wheel]
universal = True
